# misc

20231118-ghc-gadts-bug/: README.md  bug.cabal
20231118-ghc-gadts-bug/src/: Lib.hs  comment_out.patch
20231119-coeffects/: README.md  coeffects.cabal
20231119-coeffects/src/: Env.hs  OsInfo.hs  SystemInfo.hs
20231119-coeffects/test/: Main.hs
20231125-denotational-concurrency/: README.md  cabal.project  denotational-concurrency.cabal
20231125-denotational-concurrency/app/: Main.hs
20231125-denotational-concurrency/commutative-monoid/: commutative-monoid.cabal
20231125-denotational-concurrency/commutative-monoid-containers/: commutative-monoid-containers.cabal
20231125-denotational-concurrency/src/: Lib.hs
20231129-single-program-web-apps/: README.md  cabal.project  flake.nix  single-program-web-apps.cabal
20231129-single-program-web-apps/app/: Main.hs
20231129-single-program-web-apps/compiler-plugin/: compiler-plugin.cabal
20231129-single-program-web-apps/compiler-plugin/app/: Main.hs
20231129-single-program-web-apps/compiler-plugin/src/Compiler/: Plugin.hs
20231129-single-program-web-apps/notes/: client-server-code-reuse.md
20231129-single-program-web-apps/src/: Lib.hs
20231129-single-program-web-apps/src/SPWA/: App.hs  Behavior.hs  DomEvent.hs  Element.hs  Event.hs  ExprToJavascript.hs  Html.hs  Interact.hs  Js.hs  MemoRef.hs  Page.hs  PageBuilder.hs  Path.hs  RPC.hs  Reactive.hs  Send.hs  Session.hs  Supply.hs  Template.hs
20240103-total-parser-combinators/haskell/: parser.cabal
20240103-total-parser-combinators/haskell/src/: Parser.hs
20240209-concatenative-language/haskell/: concatenative-language.cabal  fourmolu.yaml
20240209-concatenative-language/haskell/app/: Main.hs
20240209-concatenative-language/haskell/examples/: 1.cat  aoc2023-1.cat  char.cat  list.cat  maybe.cat  product.cat  string.cat  sum.cat
20240209-concatenative-language/haskell/src/: Compile.hs  Eval.hs  Lib.hs
20240209-concatenative-language/haskell/src/AOC2023/: D1.hs
20240209-concatenative-language/haskell/src/Lib/: Prelude.hs  Ty.hs
20240329-text-columns/haskell/: text-columns.cabal
20240329-text-columns/haskell/app/: Main.hs
20240416-server-side-inline-js/: flake.nix  server-side-inline-js.cabal
20240416-server-side-inline-js/src/: App.hs  Db.hs  Id.hs  Js.hs  Lib.hs  Maybe.hs
20240416-server-side-inline-js/src/App/: Api.hs
20240416-server-side-inline-js/src/Html/: Class.hs
20240416-server-side-inline-js/src/Js/: Promise.hs
20240416-server-side-inline-js/src/Lib/: Match.hs
20240518-processes/: procession.cabal
20240518-processes/src/: Processing.hs
20240704-functional-web-routing/: CHANGELOG.md  LICENSE  README.md  flake.nix  functional-web-routing.cabal
20240704-functional-web-routing/app/: Main.hs
20240704-functional-web-routing/src/Web/: Body.hs  Endpoint.hs  Link.hs  Param.hs  Path.hs  Request.hs  Response.hs  Route.hs  RouteMap.hs  UrlTemplate.hs  Wai.hs  Warp.hs
20240720-monte-carlo-integration/: flake.nix  hie.yaml  monte-carlo-integration.cabal
20240720-monte-carlo-integration/app/: Main.hs
20240911-functional-image-rendering/: CHANGELOG.md  flake.nix  functional-image-rendering.cabal  hie.yaml
20240911-functional-image-rendering/app/: Main.hs
20240911-functional-image-rendering/src/: Animation.hs  FRP.hs  Image.hs
20240911-functional-image-rendering/src/FRP/: Mono.hs  Pure.hs
20240911-functional-image-rendering/src/Image/: Pure.hs  X11.hs
20241019-ghc-exactprint/: README.md  flake.nix  ghc-exactprint-test.cabal  hie.yaml
20241019-ghc-exactprint/app/: Main.hs
20241019-ghc-exactprint/app/GHC/: Lens.hs  Syntax.hs
20241019-ghc-exactprint/app/GHC/ExactPrint/: Debug.hs  Transform.hs
20241019-ghc-exactprint/data/: File.hs
20241113-deconstructing-linear-smc/: README.md  deconstructing-linear-smc.cabal
20241113-deconstructing-linear-smc/src/: Lib.hs  Term.hs
20241204-rust-crossplatform-font-test/: Cargo.toml  flake.nix
20241204-rust-crossplatform-font-test/notes/: binary-size.md
20241204-rust-crossplatform-font-test/src/: main.rs  shader.wgsl
20241207-rust-crossplatform-test/: Cargo.toml  README.md  flake.nix
20241207-rust-crossplatform-test/src/: alloc.rs  io.rs  lib.rs  main.rs  stdio.rs  thread.rs  window.rs  x11.rs
20241207-rust-crossplatform-test/src/macos/: app_kit.rs  core_graphics.rs  foundation.rs  mod.rs  objc.rs
20241214-monad-bayes/: CHANGELOG.md  LICENSE  flake.nix  monad-bayes-test.cabal
20241214-monad-bayes/app/: Main.hs
20241223-type-passing/compiler/: cabal.project  justfile  type-passing-compiler.cabal
20241223-type-passing/compiler/app/: Main.hs
20241223-type-passing/compiler/data/: runtime.h
20241223-type-passing/compiler/data/runtime/: array.c  rc.c  (+4 more)
20241223-type-passing/compiler/examples/: 1.tp
20250108-simple-search-ranking/: CHANGELOG.md  LICENSE  README.md  x20250108-simple-search-ranking.cabal
20250108-simple-search-ranking/app/: Main.hs
20250318-memoizable-queries/: flake.nix  hie.yaml  x20250318-memoizable-queries.cabal
20250318-memoizable-queries/app/: Main.hs
20250503-template-language/template-language-c/: Cargo.toml
20250503-template-language/template-language-c/examples/: main.c
20250503-template-language/template-language-c/src/: lib.rs  tpl.h
20250704-faster-typesafe-web-routing/: CHANGELOG.md  LICENSE  README.md  flake.nix  hie.yaml  x20250704-faster-typesafe-web-routing.cabal
20250704-faster-typesafe-web-routing/app/: Main.hs
20250704-faster-typesafe-web-routing/src/: Lib.hs
20250704-faster-typesafe-web-routing/src/Wai/: Request.hs
20250806-datalog/: .gitignore  README.md  cabal.project  flake.nix  hie.yaml  x20250806-datalog.cabal
20250806-datalog/app/: Main.hs
20250806-datalog/examples/: countReverseDeps.dl  cycles.dl  derivations.dl  envvars.dl  reverseDeps_hscolour.dl  roots.dl
20250806-datalog/src/: Database.hs  Eval.hs  Lib.hs  LibOld.hs  Parse.hs  Syntax.hs
20250806-datalog/test/: Main.hs  MainOld.hs  movies.json
20250907-haskell-gtk4/basics/: gtk4-basics.cabal
20250907-haskell-gtk4/basics/app/: Main.hs
(+247 files in other folders)
