cabal-version:      3.0
name:               bug
version:            0.1.0.0
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Lib
    build-depends:    base >=4.17 && <5
    hs-source-dirs:   src
    default-language: Haskell2010