cabal-version:      3.0
name:               coeffects
version:            0.1.0.0
license:            BSD-3-Clause
author:             Isaac Elliott
maintainer:         isaace71295@gmail.com
category:           Data
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Env, OsInfo
    build-depends:    base ^>=4.18.1.0, comonad
    hs-source-dirs:   src
    default-language: Haskell2010

executable coeffects
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.1.0,
        coeffects

    hs-source-dirs:   app
    default-language: Haskell2010
