cabal-version:      3.0
name:               denotational-concurrency
version:            0.1.0.0
license:            BSD-3-Clause
author:             Isaac Elliott
maintainer:         isaace71295@gmail.com
category:           Concurrency
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Lib
    build-depends:    
        async,
        base ^>=4.18.1.0,
        commutative-monoid,
        free,
        list-transformer,
        mmorph,
        mtl,
        stm
    hs-source-dirs:   src
    default-language: Haskell2010

executable denotational-concurrency
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.1.0,
        denotational-concurrency,
        mmorph,
        mtl

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite denotational-concurrency-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.1.0,
        denotational-concurrency
