cabal-version:      3.0
name:               single-program-web-apps
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
author:             Isaac Elliott
maintainer:         isaace71295@gmail.com
-- copyright:
category:           Web
build-type:         Simple
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Lib
    -- other-modules:
    -- other-extensions:
    build-depends:    
        aeson, 
        base ^>=4.18.1.0,
        bytestring,
        compiler-plugin,
        containers,
        dependent-map,
        http-types,
        mtl,
        prim-uniq,
        some,
        text,
        wai,
        warp
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -fplugin=Compiler.Plugin

executable single-program-web-apps
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.18.1.0,
        compiler-plugin,
        random,
        single-program-web-apps,
        time

    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -fplugin=Compiler.Plugin

test-suite single-program-web-apps-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.1.0,
        single-program-web-apps
