cabal-version:      3.0
name:               server-side-inline-js
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
author:             Isaac Elliott
maintainer:         isaace71295@gmail.com
-- copyright:
category:           Web
build-type:         Simple
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Maybe

        App
        App.Api
        Db
        Lib
        Lib.Match
        Html.Class
        Id
        Js
        Js.Promise
    build-depends:
        aeson,
        base ^>=4.18.2.0,
        blaze-html,
        blaze-markup,
        barbies,
        bytestring,
        http-api-data,
        mtl,
        random,
        servant,
        servant-blaze,
        servant-server,
        text >=2.0,
        transformers,
        warp
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions:
        DataKinds
        DeriveGeneric
        GADTs
        GeneralizedNewtypeDeriving
        OverloadedStrings
        TypeOperators

        NoFieldSelectors
        OverloadedRecordDot
        DuplicateRecordFields
