cabal-version:      3.0
name:               procession
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Isaac Elliott
maintainer:         isaace71295@gmail.com
-- copyright:
category:           System
build-type:         Simple
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Processing
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.2.1, process
    hs-source-dirs:   src
    default-language: Haskell2010
