cabal-version:      3.0
name:               functional-web-routing
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Isaac Elliott
maintainer:         isaace71295@gmail.com
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Web.Body
        Web.Endpoint
        Web.Link
        Web.Param
        Web.Path
        Web.Request
        Web.Response
        Web.Route
        Web.RouteMap
        Web.UrlTemplate
        Web.Wai
        Web.Warp
    build-depends:
        barbies,
        base ^>=4.18.2.1,
        bytestring,
        containers,
        http-api-data,
        http-types,
        text >=2.0,
        wai,
        warp
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions:
        GeneralisedNewtypeDeriving
        KindSignatures
        OverloadedStrings
        ScopedTypeVariables
        TypeApplications

executable functional-web-routing
    import:           warnings
    main-is:          Main.hs
    -- other-extensions:
    build-depends:
        barbies,
        base ^>=4.18.2.1,
        bytestring,
        functional-web-routing,
        http-api-data,
        text
    hs-source-dirs:   app
    default-language: Haskell2010
