cabal-version:      2.4
name:               ghc-exactprint-test
version:            0.1.0.0
author:             Isaac Elliott
maintainer:         isaace71295@gmail.com

executable ghc-exactprint-test
    build-depends:
        base,
        ghc,
        ghc-exactprint,
        ghc-paths,
        lens
    hs-source-dirs:   app
    main-is:          Main.hs
    other-modules:
        GHC.ExactPrint.Debug
        GHC.ExactPrint.Transform
        GHC.Lens
        GHC.Syntax
    default-language: Haskell2010
    ghc-options:      -Wall -Werror
