cabal-version:      3.12
name:               x20250318-memoizable-queries
version:            0.1.0.0
license:            NONE
author:             Isaac Elliott
maintainer:         isaace71295@gmail.com
build-type:         Simple
common warnings
    ghc-options: -Wall

executable x20250318-memoizable-queries
    import:           warnings
    main-is:          Main.hs
    build-depends:
        barbies,
        base ^>=4.18.2.1,
        bytestring,
        transformers
    hs-source-dirs:   app
    default-language: Haskell2010
