cabal-version:      3.0
name:               x20250704-faster-typesafe-web-routing
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Isaac Elliott
maintainer:         isaace71295@gmail.com
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Lib
                      Wai.Request
    build-depends:    base ^>=4.19.2.0,
                      bytestring,
                      containers,
                      http-types,
                      text,
                      transformers,
                      wai
    hs-source-dirs:   src
    default-language: Haskell2010

executable x20250704-faster-typesafe-web-routing
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.19.2.0,
        x20250704-faster-typesafe-web-routing,
        text,
        warp

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite x20250704-faster-typesafe-web-routing-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.19.2.0,
        x20250704-faster-typesafe-web-routing
