cabal-version:      3.0
name:               x20250806-datalog
version:            0.1.0.0
license:            BSD-3-Clause
author:             Isaac Elliott
maintainer:         isaace71295@gmail.com
category:           Database
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Lib
        LibOld
        Parse
    build-depends:
        base ^>=4.19.2.0,
        containers,
        mtl,
        parsers >=0.13,
        parsers-sage,
        sage,
        serialise,
        text >=2.0,
        vector
    hs-source-dirs:   src
    default-language: Haskell2010

executable x20250806-datalog
    import:           warnings
    main-is:          Main.hs
    build-depends:
        aeson,
        async,
        base ^>=4.19.2.0,
        binary,
        bytestring,
        cborg,
        cborg-json,
        containers,
        diagnostica,
        diagnostica-sage,
        directory,
        filepath,
        optparse-applicative,
        parsers-sage,
        process,
        sage,
        serialise,
        stm,
        text,
        time,
        x20250806-datalog

    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N

test-suite x20250806-datalog-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:    MainOld
    build-depends:
        aeson,
        base ^>=4.19.2.0,
        containers,
        hspec,
        text,
        vector,
        x20250806-datalog
