cabal-version:      3.0
name:               commutative-monoid-containers
version:            0.1.0.0
license:            BSD-3-Clause
author:             Isaac Elliott
maintainer:         isaace71295@gmail.com
category:           Concurrency
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Data.Map.CommutativeMonoid
        Data.Map.CommutativeSemigroup
        Data.Set.CommutativeMonoid
        Data.Set.CommutativeSemigroup
    build-depends:    base ^>=4.18.1.0, commutative-monoid, containers
    hs-source-dirs:   src
    default-language: Haskell2010