cabal-version:      3.0
name:               commutative-monoid
version:            0.1.0.0
license:            BSD-3-Clause
author:             Isaac Elliott
maintainer:         isaace71295@gmail.com
category:           Concurrency
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Data.Monoid.Commutative
        Data.Semigroup.Commutative
    build-depends:    base ^>=4.18.1.0
    hs-source-dirs:   src
    default-language: Haskell2010