cabal-version:      3.0
name:               compiler-plugin
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
author:             Isaac Elliott
maintainer:         isaace71295@gmail.com
-- copyright:
category:           Language
build-type:         Simple
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules: 
        Compiler.Plugin
        Compiler.Plugin.Interface
    build-depends:    
        base ^>=4.18.1.0,
        ghc,
        syb
    hs-source-dirs:   src
    default-language: Haskell2010

executable compiler-plugin-example
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.1.0,
        compiler-plugin

    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -fplugin=Compiler.Plugin