cabal-version:      3.0
name:               concatenative-language
version:            0.1.0.0
license:            BSD-3-Clause
author:             Isaac Elliott
maintainer:         isaace71295@gmail.com
category:           Language
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Lib
    build-depends:    base ^>=4.18.1.0
                    , comonad
                    , lens
                    , parsers
                    , trifecta
                    , unordered-containers
    hs-source-dirs:   src
    default-language: Haskell2010

executable concatenative-language
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.1.0,
        comonad,
        concatenative-language,
        optparse-applicative,
        unordered-containers

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite concatenative-language-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.1.0,
        concatenative-language
