cabal-version:      3.0
name:               text-columns
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
author:             Isaac Elliott
maintainer:         isaace71295@gmail.com
-- copyright:
category:           Text
build-type:         Simple
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable text-columns
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.2.0, text
    hs-source-dirs:   app
    default-language: Haskell2010
