cabal-version:      3.0
name:               gtk4-basics
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Isaac Elliott
maintainer:         isaace71295@gmail.com
category:           Graphics
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable gtk4-basics
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.19.2.0,
        haskell-gi-base,
        gi-gio,
        gi-gobject,
        gi-gtk4
    hs-source-dirs:   app
    default-language: Haskell2010
